--- a/src/content/css/App.scss
+++ b/src/content/css/App.scss
@@ -197,6 +197,12 @@ body {
                     box-shadow: 0 4px 8px 0 rgba(29, 185, 84, 0.2), 0 6px 20px 0 rgba(29, 185, 84, 0.29);
                 }
             }
+
+            h6 {
+                margin: 0;
+                margin-top: 1rem;
+                font-size: .6rem;
+            }
         }
     }
 
