--- a/src/content/css/App.scss
+++ b/src/content/css/App.scss
@@ -25,6 +25,24 @@
     user-select: none;
 }
 
+@mixin spoti-button () {
+    background-color: #1db954;
+    color: #191414;
+    text-decoration: none;
+    padding: 10px 30px;
+    border: none;
+    border-radius: 30px;
+    outline: none;
+    font-size: 0.8rem;
+    font-weight: 600;
+    cursor: pointer;
+
+    &:hover {
+        padding: 12px 32px;
+        box-shadow: 0 4px 8px 0 rgba(29, 185, 84, 0.2), 0 6px 20px 0 rgba(29, 185, 84, 0.29);
+    }
+}
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -181,27 +199,13 @@ body {
             background-color: transparent;
 
             .auth-link {
-                background-color: #1db954;
-                color: #191414;
-                text-decoration: none;
-                padding: 10px 30px;
-                border: none;
-                border-radius: 30px;
-                outline: none;
-                font-size: 0.8rem;
-                font-weight: 600;
-                cursor: pointer;
-
-                &:hover {
-                    padding: 12px 32px;
-                    box-shadow: 0 4px 8px 0 rgba(29, 185, 84, 0.2), 0 6px 20px 0 rgba(29, 185, 84, 0.29);
-                }
+                @include spoti-button();
             }
 
             h6 {
                 margin: 0;
                 margin-top: 1rem;
-                font-size: .6rem;
+                font-size: 0.6rem;
             }
         }
     }
@@ -216,7 +220,21 @@ body {
             .results {
                 display: flex;
                 justify-content: center;
-                .state {
+               
+                .funcs{
+                    display: block;
+                    button{
+                        @include spoti-button();
+                        margin: 20px 10px;
+
+                    }
+                }
+
+                .error {
+                    h5 {
+                        margin: 5px;
+                        text-align: center;
+                    }
                 }
             }
         }
