--- a/src/content/css/App.scss
+++ b/src/content/css/App.scss
@@ -231,7 +231,9 @@ body {
                     align-items: center;
                     flex-wrap: wrap;
                     width: 100%;
+                    @include no-select();
                     ul {
+                        display: block;
                         justify-content: center;
                         align-items: center;
                         margin: 0;
@@ -247,6 +249,7 @@ body {
                             align-items: center;
                             padding: 2px 0 0 0;
                             cursor: pointer;
+                            width: 100%;
 
                             .item {
                                 display: flex;
@@ -268,6 +271,7 @@ body {
                                         width: 40px;
                                         height: 40px;
                                         border-radius: 5px;
+                                        margin-top: 2px;
                                     }
                                 }
                                 .name {
@@ -286,6 +290,47 @@ body {
                                 }
                             }
 
+                            .single-item {
+                                display: flex;
+                                justify-content: center;
+                                width: 100%;
+                                height: 100px;
+                                padding: 0px 5px;
+
+                                &:hover {
+                                    background-color: #191414;
+                                    filter: brightness(135%);
+                                }
+
+                                .art {
+                                    align-self: center;
+                                    width: 100px;
+                                    @include no-select();
+
+                                    img {
+                                        width: 100px;
+                                        height: 95px;
+                                        border-radius: 5px;
+                                        padding-top: 5px;
+                                    }
+                                }
+                                .name {
+                                    font-size: 0.9rem;
+
+                                    @media (min-width: 760px) {
+                                        font-size: 1rem;
+                                    }
+                                    @media (min-width: 1260px) {
+                                        font-size: 1.1rem;
+                                    }
+                                    height: 100px;
+                                    display: flex;
+                                    align-items: center;
+                                    width: 100%;
+                                    padding: 0px 10px;
+                                }
+                            }
+
                             .selected {
                                 border-radius: 5px;
                                 color: #191414;
@@ -297,6 +342,126 @@ body {
                                 }
                             }
                         }
+
+                        .track-results {
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            padding: 2px 0 0 0;
+                            cursor: pointer;
+                            width: 100%;
+
+                            .item {
+                                display: flex;
+                                justify-content: center;
+                                width: 90%;
+                                padding: 1px 5px;
+
+                                &:hover {
+                                    background-color: #191414;
+                                    filter: brightness(135%);
+                                }
+
+                                .art {
+                                    align-self: center;
+                                    width: 40px;
+                                    @include no-select();
+
+                                    img {
+                                        width: 40px;
+                                        height: 40px;
+                                        border-radius: 5px;
+                                        margin-top: 2px;
+                                    }
+                                }
+                                .name {
+                                    font-size: 0.8rem;
+
+                                    @media (min-width: 760px) {
+                                        font-size: 0.9rem;
+                                    }
+                                    @media (min-width: 1260px) {
+                                        font-size: 1rem;
+                                    }
+                                    padding: 15px 0;
+                                    width: 100%;
+                                    margin-left: 1rem;
+                                    align-self: center;
+
+                                    span {
+                                        padding-top: 5px;
+                                        font-size: 0.6rem;
+        
+                                        @media (min-width: 760px) {
+                                            font-size: 0.7rem;
+                                        }
+                                        @media (min-width: 1260px) {
+                                            font-size: 0.8rem;
+                                        }
+        
+                                        display: block;
+                                    }
+                                }
+                            }
+
+                            .single-item {
+                                display: flex;
+                                justify-content: center;
+                                width: 100%;
+                                height: 100px;
+                                padding: 0px 5px;
+
+                                &:hover {
+                                    background-color: #191414;
+                                    filter: brightness(135%);
+                                }
+
+                                .art {
+                                    align-self: center;
+                                    width: 100px;
+                                    @include no-select();
+
+                                    img {
+                                        width: 100px;
+                                        height: 95px;
+                                        border-radius: 5px;
+                                        padding-top: 5px;
+                                    }
+                                }
+                                .name {
+                                    font-size: 0.9rem;
+
+                                    @media (min-width: 760px) {
+                                        font-size: 1rem;
+                                    }
+                                    @media (min-width: 1260px) {
+                                        font-size: 1.1rem;
+                                    }
+                                    height: 100px;
+                                    display: flex;
+                                    align-items: center;
+                                    width: 100%;
+                                    padding: 0px 10px;
+                                    span {
+                                        display: block;
+                                    }
+                                }
+                            }
+
+                            .selected {
+                                border-radius: 5px;
+                                color: #191414;
+                                background-color: #1db954;
+                                filter: brightness(55%);
+                                &:hover {
+                                    background-color: #1db954;
+                                    filter: brightness(85%);
+                                }
+                            }
+                        }
+                    }
+                    ul.single {
+                        display: flex;
                     }
                 }
             }
