--- a/src/content/css/App.scss
+++ b/src/content/css/App.scss
@@ -717,7 +717,19 @@ body {
 
             .react {
                 h3 {
-                    text-shadow: 1px 1px 2px rgba(29, 185, 84, 0.6);
+                    text-shadow: 1px 1px 2px rgba(255, 250, 250, 0.7);
+                    display: inline-block;
+                    margin: 0;
+                    color: #61DBFB;
+                    cursor: pointer;
+
+                    &:hover {
+                        position: relative;
+                        bottom: 1.5px;
+                    }
+                }
+                h2 {
+                    text-shadow: 1px 1px 2px rgba(	111, 78, 55, 0.7);
                     display: inline-block;
                     margin: 0;
                 }
