--- a/src/content/css/App.scss
+++ b/src/content/css/App.scss
@@ -74,9 +74,9 @@ body {
 
     .top {
         @media (max-width: 700px) {
-            margin-top: 10%;
+            margin-top: 14%;
         }
-        margin-top: 10%;
+        margin-top: 7%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -711,16 +711,23 @@ body {
             flex-direction: column;
             flex-grow: 0;
             margin-right: 0.55rem;
+
             .spoti {
+                @media (max-width: 760px) {
+                    font-size: 0.5rem;
+                }
                 font-size: 0.55rem;
             }
 
             .react {
+                @media (max-width: 760px) {
+                    font-size: 0.55rem;
+                }
                 h3 {
                     text-shadow: 1px 1px 2px rgba(255, 250, 250, 0.7);
                     display: inline-block;
                     margin: 0;
-                    color: #61DBFB;
+                    color: #61dbfb;
                     cursor: pointer;
 
                     &:hover {
@@ -729,11 +736,100 @@ body {
                     }
                 }
                 h2 {
-                    text-shadow: 1px 1px 2px rgba(	111, 78, 55, 0.7);
+                    text-shadow: 1px 1px 2px rgba(111, 78, 55, 0.7);
                     display: inline-block;
                     margin: 0;
                 }
             }
         }
     }
+}
+
+.loading{
+ 
+    .lds-roller {
+        display: inline-block;
+        position: relative;
+        width: 80px;
+        height: 80px;
+      }
+      .lds-roller div {
+        animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+        transform-origin: 40px 40px;
+      }
+      .lds-roller div:after {
+        content: " ";
+        display: block;
+        position: absolute;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        background: #1db954;
+        margin: -4px 0 0 -4px;
+      }
+      .lds-roller div:nth-child(1) {
+        animation-delay: -0.036s;
+      }
+      .lds-roller div:nth-child(1):after {
+        top: 63px;
+        left: 63px;
+      }
+      .lds-roller div:nth-child(2) {
+        animation-delay: -0.072s;
+      }
+      .lds-roller div:nth-child(2):after {
+        top: 68px;
+        left: 56px;
+      }
+      .lds-roller div:nth-child(3) {
+        animation-delay: -0.108s;
+      }
+      .lds-roller div:nth-child(3):after {
+        top: 71px;
+        left: 48px;
+      }
+      .lds-roller div:nth-child(4) {
+        animation-delay: -0.144s;
+      }
+      .lds-roller div:nth-child(4):after {
+        top: 72px;
+        left: 40px;
+      }
+      .lds-roller div:nth-child(5) {
+        animation-delay: -0.18s;
+      }
+      .lds-roller div:nth-child(5):after {
+        top: 71px;
+        left: 32px;
+      }
+      .lds-roller div:nth-child(6) {
+        animation-delay: -0.216s;
+      }
+      .lds-roller div:nth-child(6):after {
+        top: 68px;
+        left: 24px;
+      }
+      .lds-roller div:nth-child(7) {
+        animation-delay: -0.252s;
+      }
+      .lds-roller div:nth-child(7):after {
+        top: 63px;
+        left: 17px;
+      }
+      .lds-roller div:nth-child(8) {
+        animation-delay: -0.288s;
+      }
+      .lds-roller div:nth-child(8):after {
+        top: 56px;
+        left: 12px;
+      }
+      @keyframes lds-roller {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+      
 }
